deploy/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deploysentry-api
  labels:
    app.kubernetes.io/name: deploysentry-api
    app.kubernetes.io/component: api-server
    app.kubernetes.io/part-of: deploysentry
    app.kubernetes.io/managed-by: kustomize
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: deploysentry-api
    app.kubernetes.io/component: api-server
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
